# taigi-news-reader

./: .gitignore  AGENTS.md  LICENSE  PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  index.html  robots.txt  sitemap.xml
.github/workflows/: ci.yml  store-package.yml
assets/: site.css
assets/audio/: README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/taigi_news_reader_backend/: __init__.py  __main__.py  access.py  app.py  config.py  jobs.py  models.py  service.py
backend/taigi_news_reader_backend/providers/: __init__.py  base.py  edge_tts.py  gemini.py  mms.py  mock.py  ollama.py  openai_compatible.py  poj.py  remote_tts.py
backend/tests/: conftest.py  test_access.py  test_api.py  test_config.py  test_edge_tts.py  test_gemini.py  test_hosted_providers.py  test_jobs.py  test_lan_deployment.py  test_mms.py  test_ollama.py  test_poj.py  test_private_beta_deployment.py  test_service.py
deploy/lan/: .gitignore  README.md  backend.env.example  compose.yaml  lan.env.example
deploy/private-beta/: README.md  compose.override.yaml
docs/: architecture.md  chrome-web-store-listing.md  chrome-web-store-readiness.md  manual-test.md  validation.md
extension/: eslint.config.js  package-lock.json  package.json
extension/scripts/: build.js  clean.js  package-store.js  release-check.js
extension/src/: manifest.json  offscreen.html  offscreen.js  options.css  options.html  options.js  service-worker.js  sidepanel.css  sidepanel.html  sidepanel.js
extension/test/: access-status.test.js  backend-fetch.test.js  (+17 more)
(+24 files in other folders)
