[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "taigi-news-reader-backend"
version = "0.1.2"
description = "Local Taiwanese Hokkien translation and speech service for the Taigi News Reader extension"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
mandarin = [
  "edge-tts>=7,<8",
]
tts = [
  "torch>=2.6,<3",
  "transformers>=4.53,<6",
  "uroman>=1.3.1.1,<2",
]
dev = [
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.1,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["taigi_news_reader_backend"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
